   44- matkerint: replace underlying LLL algorithm by mathnf
       Simple bench: M=matrix(50,55,i,j,random(10^5)); \\ 200 times faster
   45- allow t_VECSMALL vector exponents in gen_factorback
   47- [libpari] rename 'define' PI -> M_PI and use proper constant
   48- no longer print 0 t_POLMOD as "0", bug e.g. Mod(0,x). Uniformize code
       and behaviour with t_INTMOD.
   49- warn when coercing quotient rings when 'debug' non-zero
      ? \g1
      ? Mod(1,2)+Mod(1,3)
        *** _+_: Warning: coercing quotient rings; moduli 2 and 3 -> 1.
   50- content([]) -> 0 [ was 1 ]
   51- [] / 0 => div. by 0. Now returns [] (as [] \ 0 already did)
LGr52- use GRH-guaranteed bounds in bnfinit for residue estimate
   53- Configure: avoid inserting unnecessary -L arguments in link line
   54- genus2red: change syntax. Allow either genus2red(P) or genus2red([P,Q])
       instead of mandatory Q (was: genus2red(Q,P) with Q almost always 0).
       Allow uniformization with hyperellcharpoly
   55- old functions from gp-1.39.15 no longer loaded into an "entree" table,
       no longer complete specially "whatnow" arguments; remove compat.c and
       most of gp_init.c
BA 56- Rename row_Flm -> Flm_row, row_zm -> zm_row
   57- rewrote intnum / intnuminit routines
   58- nucomp now takes L = floor(|D|^(1/4)) as a 3rd argument. Former
       nucomp(x,n) is nucomp(x,n,NULL).

Removed
   1- deprecated functions nfbasis0, nfdisc0, factorpadic0
   2- deprecated function manage_var
   3- useless function intnuminitgen (not very useful and impossible to use
      reliably together with intnum with boundary conditions)
   4- useless function intnumstep: instead of intnum(a,b, intnumstep()+m),
      use intnum(a,b,m).
   5- partially implemented functions intfouriercos / intfouriersin /
      intfourierexp: use intnum (possibly intfuncinit). Make sure to indicate
      oscillating behaviour when function decrease slowly at oo