@@ -1,52 +1,0 @@
-Function: intlaplaceinv
-Section: sums
-C-Name: intlaplaceinv0
-Prototype: V=GGEDGp
-Help: intlaplaceinv(X=sig,z,expr,{tab}): numerical integration on the line
- real(X) = sig of expr(X)exp(zX)dz/(2*I*Pi), i.e. inverse Laplace transform of
- expr at z. tab is as in intnum.
-Wrapper: (,,G)
-Description:
-  (gen,gen,gen,?gen):gen:prec intlaplaceinv(${3 cookie}, ${3 wrapper}, $1, $2, $4, prec)
-Doc: numerical integration of $(2i\pi)^{-1}\var{expr}(X)e^{Xz}$ with respect
- to $X$ on the line $\Re(X)=sig$. In other words, inverse Laplace transform
- of the function corresponding to \var{expr} at the value $z$.
-
- $sig$ is coded as follows. Either it is a real number $\sigma$, equal to the
- abscissa of integration, and then the integrand is assumed to
- be slowly decreasing when the imaginary part of the variable tends to
- $\pm\infty$. Or it is a two component vector $[\sigma,\alpha]$, where
- $\sigma$ is as before, and either $\alpha=0$ for slowly decreasing functions,
- or $\alpha>0$ for functions decreasing like $\exp(-\alpha t)$. Note that it
- is not necessary to choose the exact value of $\alpha$; \var{tab} and
- $m$ are as in \kbd{intnum}.
-
- It is often a good idea to use this function with $m = 1$ or $2$
- or to increase the abscissa of integration $\sigma$. For example:
-
- \bprog
- ? \p 105
- ? intlaplaceinv(x=2, 1, 1/x) - 1
- time = 92 ms.
- %1 = 7.1... E-61 + 8.5... E-61*I \\@com not so good
- ? intlaplaceinv(x=2, 1, 1/x, m = 1) - 1
- time = 172 ms.
- %3 = 2.6... E-109 + 1.8... E-108*I \\@com better
- ? intlaplaceinv(x=2, 1, 1/x, m = 2) - 1
- time = 352 ms.
- %4 = -3.5... E-114 + 2.5...E-115*I \\@com almost perfect but slow.
- ? intlaplaceinv(x=5, 1, 1/x) - 1
- time = 88 ms.
- %5 = -2.0... E-94 - 1.0... E-94*I \\@com better than \%1
- ? intlaplaceinv(x=5, 1, 1/x, m = 1) - 1
- time = 176 ms.
- %6 = -3.4... E-114 - 7.4...E-115*I \\@com perfect, fast.
- ? intlaplaceinv(x=10, 1, 1/x) - 1
- time = 88 ms.
- %7 = -2.8... E-112 + 1.7...E-112*I \\@com perfect, fastest, but why $sig=10$?
- ? intlaplaceinv(x=100, 1, 1/x) - 1
- time = 88 ms.
- %7 = -4.3... E-74 + 8.1... E-75*I \\@com too far now...
- @eprog
-
- \synt{intlaplaceinv}{void *E, GEN (*eval)(void*,GEN), GEN sig,GEN z, GEN tab, long prec}.
