@@ -1,42 +1,0 @@
-Function: intmellininvshort
-Section: sums
-C-Name: intmellininvshort
-Prototype: GGGp
-Help: intmellininvshort(sig,z,tab): numerical integration on the
- line real(X) = sig (or sig[1]) of s(X)z^(-X)dX/(2*I*Pi), i.e. inverse Mellin
- transform of s at z. sig is coded as follows: either it is real, and then
- by default assume s(X) decreases like exp(-X). Or sig = [sigR, al], sigR is
- the abscissa of integration, and al = 0 for slowly decreasing functions, or
- al > 0 if s(X) decreases like exp(-al*X). Compulsory table tab has been
- precomputed using the command intfuncinit(t=[-oo,sig[2]],[oo,sig[2]],s)
- (with possibly its two optional additional parameters), where sig[2] = 1
- if not given. Orders of magnitude faster than intmellininv.
-Doc: numerical integration
- of $(2i\pi)^{-1}s(X)z^{-X}$ with respect to $X$ on the line $\Re(X)=sig$.
- In other words, inverse Mellin transform of $s(X)$ at the value $z$.
- Here $s(X)$ is implicitly contained in \var{tab} in \kbd{intfuncinit} format,
- typically
- \bprog
- tab = intfuncinit(T = -oo, oo, s(sig + I*T))
- @eprog\noindent
- or similar commands. Take the example of the inverse Mellin transform of
- $\Gamma(s)^3$ given in \kbd{intmellininv}:
-
- \bprog
- ? \p 105
- ? A = intmellininv(s=2,4, gamma(s)^3);
- time = 308 ms. \\@com not too fast because of $\Gamma(s)^3$.
- \\ @com function of real type, decreasing as $\exp(-3\pi/2\cdot |t|)$
- ? tab = intfuncinit(t=[-oo, 3*Pi/2],[oo, 3*Pi/2], gamma(2+I*t)^3, 1);
- time = 173 ms.
- ? intmellininvshort(2,4, tab) - A
- time = 4 ms.
- %4 = -8.1... E-110 + 0.E-120*I \\@com 80 times faster than \kbd{A} and perfect.
- ? tab2 = intfuncinit(t=-oo, oo, gamma(2+I*t)^3, 1);
-  ***   at top-level: ...nit(t=-oo,oo,gamma(2+I*t)^3,1)
-  ***                                             ^-----
-  *** _^s: overflow in expo().
- @eprog\noindent
- In the computation of \var{tab}, it was not essential to include the
- \emph{exact} exponential decrease of $\Gamma(2+it)^3$. But as the last
- example shows, a rough indication \emph{must} be given.
